Mobile logo tab on iPhone 6/7/8 and Plus phones align test fix

--- a/CSS/socialMedia.css
+++ b/CSS/socialMedia.css
@@ -2611,7 +2611,7 @@ h4 {
   .tab {
     transform: scale(0.5) rotate(-180deg);
     left: -62%;
-    top: -307%;
+    top: -327%;
     width: 80%;
     height: 80%;
     padding: 820px 40px;
@@ -2672,7 +2672,7 @@ h4 {
 
   #Twitter-Logo {
     transform: scale(1.08) rotate(-180deg);
-    left: -9vw;
+    left: -8vw;
   }
 
   #Facebook-Logo {
@@ -2884,7 +2884,7 @@ h4 {
 /* iPhones: 6/7/8 */
 @media (max-width: 375px) and (max-height: 667px) {
   .tab {
-    top: -126vw;
+    top: -368%;
   }
 
   /** Navbar width adjustment **/
